* pheno:   added g_unlockWeapons cvar for unlocking weapons per class (see docs)
* pheno:   removed g_mode cvar and added flags 2048 (instant spawn), 4096 (adrenaline) and
           8192 (no damage) to g_misc cvar (see docs)
* pheno:   added server gameplay cvar change announcement
* pheno:   fixed a bug where gameplay cvar changes wasn't announced
* pheno:   added client side hitsound handling (NOTE: only available with installed
           etpub client > 20100628)
* pheno:   fixed a bug with latest etpub client installed where last hitsound is repeated after
           changing hitsound options server and/or client side
* pheno:   Lua API: added RO access to sess.aWeaponStats (reworked code from fart11eleven)
           http://www.etpub.org/viewtopic.php?f=8&t=69
* pheno:   Lua API: fixed trajectory get and set functions to have the correct data types
* pheno:   fixed memory leaking in settings config handling and in Lua API (thx gaoesa)
* pheno:   Lua API: added RO access to gentity field pers.etpubc
* pheno:   Lua API: added chat commands "c", "tc" and "bc" to et.trap_SendServerCommand()
           library call (http://wolfwiki.anime.net/index.php/SendServerCommand)
* pheno:   Lua API: fixed a bug in chat command handling where the chat message will be sent
           even if the player is not on the server
* pheno:   fixed using the wrong origin for the player localization
* pheno:   made clients inactivityTime value calculation ETPro compatible
* pheno:   fixed a bug where client wasn't moved to spectators if g_inactivityOptions
           flag '4' is set
* pheno:   fixed a bug where a muted player could use the say_teamnl command
* pheno:   fixed a bug where a player name was changed if it contains shortcut characters because
           of multiple text replacement processing
* pheno:   added IlDuca's fix for damaged antiwarp (thx ira)
* pheno:   fixed a bug where first blood message was used for last blood broadcast